--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "authors": [{
-    "name": "Flo",
+    "name": "Flo"
   }],
   "require": {
   }
