--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,19 @@
     "name": "Flo"
   }],
   "require": {
-  }
+    "php": ">=7.3",
+    "phpunit/phpunit-selenium": ">=3.0.2"
+  },
+  "support": {
+    "email": "help@saucelabs.com",
+    "irc": "irc://irc.freenode.org/saucelabs"
+  },
+  "autoload": {
+    "classmap": [
+      "PHPUnit/"
+    ]
+  },
+  "include-path": [
+    ""
+  ]
 }
