--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   }],
   "require": {
     "php": ">=5.3.0",
-    "phpunit/phpunit-selenium": ">=1.3.3"
+    "phpunit/phpunit-selenium": "8.0.0"
   },
   "autoload": {
     "classmap": [
